fix overflow

--- a/Extra/color_palette_generator/style.css
+++ b/Extra/color_palette_generator/style.css
@@ -21,7 +21,7 @@ main {
     align-items: center;
     flex-direction: column;
     border-radius: 10px;
-    padding: 10px 0;
+    padding: 30px 0;
 }
 section {
     display: none;
@@ -71,7 +71,7 @@ footer {
 }
 button {
     width: 280px;
-    height: 60px;
+    height: 100px;
     border-radius: 10px;
     font-size: 23px;
     cursor: pointer;
